<resources>
    <string name="app_name">TBCheck</string>

    <string name="str_choose_image">Choose Image</string>
    <string name="str_viewing_image">Viewing image</string>
    <string name="str_image_placement">Image placement</string>
    <string name="str_switching_camera">Switching Camera</string>
    <string name="str_failed_take_a_pict">Failed take a pict</string>
    <string name="str_didnt_have_permission">Permission denied.</string>
    <string name="str_failed_to_open_camera">Failed to open camera</string>
    <string name="str_logo">Logo</string>
    <string name="str_check">Check</string>

    <string name="str_take_using_camera">Camera</string>
    <string name="str_pick_from_gallery">Gallery</string>
    <string name="str_tap_to_choose_change_image">Tap to choose/change image</string>
    <string name="str_please_do_not_close_application_until_process_has_done">Please do not close application until process has done.</string>
    <string name="str_checking">Checking…</string>
    <string name="str_date">Date</string>
    <string name="str_accuracy">TB Percent</string>
    <string name="str_status">Status</string>
    <string name="str_colon">:</string>
    <string name="str_history">History</string>
    <string name="str_normal">Normal</string>
    <string name="str_image">Image</string>
    <string name="str_not_found">Data empty.</string>
    <string name="str_save">Save</string>
    <string name="str_saved">Saved</string>
    <string name="str_saving">Saving…</string>
</resources>